Added some Text

--- a/FirstJupyter.ipynb
+++ b/FirstJupyter.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This is my First Public Jupyter"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -35,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I don't understand why I can't see the jupyter file in github..."
+    "Apparently it just needed some text... lol "
    ]
   }
  ],
