Trying to Use LaTex

--- a/FirstJupyter.ipynb
+++ b/FirstJupyter.ipynb
@@ -1,15 +1,21 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "vscode": {
+     "languageId": "latex"
+    }
+   },
+   "outputs": [],
    "source": [
-    "This is my First Public Jupyter"
+    "#This is my First Public Jupyter Notebook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
