Now I fixed it lol

--- a/FirstJupyter.ipynb
+++ b/FirstJupyter.ipynb
@@ -1,21 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "vscode": {
-     "languageId": "latex"
-    }
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "#This is my First Public Jupyter Notebook"
+    "# My First Public Jupyter Notebook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +42,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Apparently it just needed some text... lol "
+    "### Apparently it just needed some text... lol "
    ]
   }
  ],
